# flipperzero-ufbt

./: .gitignore  README.md  SConstruct  VERSION.txt  bootstrap.py  pyproject.toml  test.py  ufbt  ufbt.cmd
.github/workflows/: pypi-publish.yml  test.yml
project_template/app_template/: ${FBT_APPID}.c  application.fam  template_app.c
site_scons/: commandline.scons  site_init.py  update.scons
site_scons/site_tools/: ufbt_help.py  ufbt_state.py
ufbt/: __init__.py  __main__.py  bootstrap.py  ufbt.py
